[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/Player/sprPlayerIdle_strip4.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Player/sprPlayerJump_strip2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/sprPlayerFall_strip2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/sprPlayerRunning_strip4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/sprPlayerSliding_strip2.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 20 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 20 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "VineSlide",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 5.5, 10 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 1, 10 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 0.5, 0.5 )

[node name="Player" type="KinematicBody2D" groups=["GravityAffected", "Player"]]
collision_mask = 68
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "Idle"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 6 )
shape = SubResource( 16 )

[node name="Pivot" type="Position2D" parent="."]

[node name="GrabHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabHitbox"]
visible = false
position = Vector2( 8, 6 )
shape = SubResource( 17 )

[node name="DashTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_mode = 0
one_shot = true

[node name="DashTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="DotKid" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 6 )
shape = SubResource( 18 )
disabled = true

[node name="UnstuckCheckTop" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Top" type="CollisionShape2D" parent="UnstuckCheckTop"]
position = Vector2( 2, -4.5 )
shape = SubResource( 19 )

[node name="UnstuckCheckLeft" type="Area2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="UnstuckCheckLeft"]
position = Vector2( -4.5, 5 )
shape = SubResource( 20 )

[node name="UnstuckCheckRight" type="Area2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="UnstuckCheckRight"]
position = Vector2( 7.5, 5 )
shape = SubResource( 20 )

[node name="UnstuckCheckBottom" type="Area2D" parent="."]

[node name="Bottom" type="CollisionShape2D" parent="UnstuckCheckBottom"]
position = Vector2( 0, 16.5 )
shape = SubResource( 20 )

[connection signal="body_entered" from="GrabHitbox" to="." method="_on_Grab_body_entered"]
[connection signal="body_exited" from="GrabHitbox" to="." method="_on_Grab_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="tween_completed" from="DashTween" to="." method="_on_DashTween_tween_completed"]
